Adding Portuguese localization for "Create Task" modal

--- a/lib/src/localization/app_pt.arb
+++ b/lib/src/localization/app_pt.arb
@@ -3,5 +3,23 @@
   "createNew": "CRIAR NOVA TAREFA",
   "@_NO_TASKS": {},
   "noTasksYet": "Sem tarefas :(",
-  "startAddingTasksNow": "Comece adicionando tarefas agora!"
+  "startAddingTasksNow": "Comece adicionando tarefas agora!",
+  "@_NEW_TASK_CREATION": {},
+  "newTasks": "Nova tarefa",
+  "title": "título",
+  "date": "data",
+  "recursiveTask": "tarefa recursiva?",
+  "sun": "Dom",
+  "mon": "Seg",
+  "tue": "Ter",
+  "wed": "Qua",
+  "thu": "Qui",
+  "fri": "Sex",
+  "sat": "Sab",
+  "priority": "prioridade",
+  "urgent": "urgente",
+  "important": "importante",
+  "importantNotUrgent": "importante, mas não urgente",
+  "notImportant": "não importante",
+  "createTask": "CRIAR TAREFA"
 }
