Adding localization to 'task' view

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -16,8 +16,10 @@
   "noTasksYet": "No tasks yet :(",
   "startAddingTasksNow": "Start by adding tasks now!",
   "@_NEW_TASK_CREATION": {},
-  "newTasks": "New task",
+  "newTask": "New task",
   "title": "title",
+  "whatAreYouPlanning": "What are you planning?",
+  "titleIsMandatory": "title is mandatory",
   "date": "date",
   "recursiveTask": "recursive task?",
   "sun": "Sun",
