--- a/lib/src/localization/app_pt.arb
+++ b/lib/src/localization/app_pt.arb
@@ -5,8 +5,10 @@
   "noTasksYet": "Sem tarefas :(",
   "startAddingTasksNow": "Comece adicionando tarefas agora!",
   "@_NEW_TASK_CREATION": {},
-  "newTasks": "Nova tarefa",
+  "newTask": "Nova tarefa",
   "title": "título",
+  "whatAreYouPlanning": "O que você está planejando?",
+  "titleIsMandatory": "título é obrigatório",
   "date": "data",
   "recursiveTask": "tarefa recursiva?",
   "sun": "Dom",
