Design creation for "task creation" modal (#10)
* Adding new colors and 'Small' TextSize

* Updating Calendar DatePicker for Task creation

* Adding child property for DashedBorder

* Creation of 'Task' View and Controller, Updating TaskPriority Enum, and adding 'CreatenewTask' modal

* Adjusting 'Date' picker text size

* Fixing Overflow on 'Days Of the week' row

* Adding Portuguese localization for "Create Task" modal

* Adding localization to 'task' view

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -14,5 +14,25 @@
   "createNew": "CREATE NEW",
   "@_NO_TASKS": {},
   "noTasksYet": "No tasks yet :(",
-  "startAddingTasksNow": "Start by adding tasks now!"
+  "startAddingTasksNow": "Start by adding tasks now!",
+  "@_NEW_TASK_CREATION": {},
+  "newTask": "New task",
+  "title": "title",
+  "whatAreYouPlanning": "What are you planning?",
+  "titleIsMandatory": "title is mandatory",
+  "date": "date",
+  "recursiveTask": "recursive task?",
+  "sun": "Sun",
+  "mon": "Mon",
+  "tue": "Tue",
+  "wed": "Wed",
+  "thu": "Thu",
+  "fri": "Fri",
+  "sat": "Sat",
+  "priority": "priority",
+  "urgent": "urgent",
+  "important": "important",
+  "importantNotUrgent": "important, not urgent",
+  "notImportant": "not important",
+  "createTask": "CREATE TASK"
 }
