Adding localization for Priorities texts

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -33,10 +33,10 @@
   "fri": "Fri",
   "sat": "Sat",
   "priority": "priority",
-  "urgent": "urgent",
-  "important": "important",
-  "importantNotUrgent": "important, not urgent",
-  "notImportant": "not important",
+  "urgent": "Urgent",
+  "important": "Important",
+  "importantNotUrgent": "Important, not urgent",
+  "notImportant": "Not important",
   "createTask": "CREATE TASK",
   "editTask": "EDIT TASK",
 
