--- a/lib/src/localization/app_pt.arb
+++ b/lib/src/localization/app_pt.arb
@@ -21,10 +21,10 @@
   "fri": "Sex",
   "sat": "Sab",
   "priority": "prioridade",
-  "urgent": "urgente",
-  "important": "importante",
-  "importantNotUrgent": "importante, mas não urgente",
-  "notImportant": "não importante",
+  "urgent": "Urgente",
+  "important": "Importante",
+  "importantNotUrgent": "Importante, mas não urgente",
+  "notImportant": "Não importante",
   "createTask": "CRIAR TAREFA",
   "editTask": "EDITAR TAREFA",
 
