chore: Implementing date selection from Calendar

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -44,5 +44,6 @@
   "recursiveTaskSelectOneDay": "[Recursive task] - Select at least 1 day!",
 
   "@_CALENDAR": {},
-  "selectADay": "Select a day"
+  "selectADay": "Select a day",
+  "confirm": "Confirm"
 }
