Extracting home menu drawer widget and strings; adjustment on close button of task view

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -41,6 +41,13 @@
   "errorTitle": "Oops, something is not right",
   "errorOkButton": "Okay",
 
+  "@_HOME": {},
+  "home": "Home",
+  "noName": "No Name",
+  "guestUser": "Guest User",
+  "registerNow": "Register now!",
+  "anonymousSession": "Anonymous Session",
+
   "email": "Email",
   "password": "Password",
   "confirmPassword": "Confirm password",
