Creating 'apiCall' function in Base controller to better handle api calls

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -40,6 +40,7 @@
   "@_ERROR": {},
   "errorTitle": "Oops, something is not right",
   "errorOkButton": "Okay",
+  "internalServerError": "A server error has occurred.\nPlease try again in a few minutes :)",
 
   "@_HOME": {},
   "home": "Home",
