Adding 'Try again' and 'Failed To load tasks' messages

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -41,6 +41,8 @@
   "errorTitle": "Oops, something is not right",
   "errorOkButton": "Okay",
   "internalServerError": "A server error has occurred.\nPlease try again in a few minutes :)",
+  "failedToLoadTasks": "Failed to load your tasks :(",
+  "tryAgain": "Try again",
 
   "@_HOME": {},
   "home": "Home",
